updated HTML file and CSS file.

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheets" type="text/css" href="assets/style1.css"/>
     <title>Joon Ruiz</title>
-    <link rel="Stylesheets" href="/assets/style.css"/>
 </head>
 <body>
-    
+    <header>
+        <nav class="rightalign">
+            <ul>
+                <li> 
+                    <a href="https://github.com/Aecop">Github</a>
+                </li>
+                <li>
+                    <a href="*">Project(Coming Soon)</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/joon-ruiz-967611201/">Linkedin</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+
+
+
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
