--- a/portfolio.html
+++ b/portfolio.html
@@ -2,21 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheets" type="text/css" href="assets/style1.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
     <title>Joon Ruiz</title>
 </head>
 <body>
     <header>
+        
         <nav class="rightalign">
             <ul>
+                <li id="mainname">
+                    <p>Joon Ruiz</p>
+                </li>
                 <li> 
-                    <a href="https://github.com/Aecop">Github</a>
+                    <a href="https://github.com/Aecop" target="_blank">GITHUB</a>
                 </li>
                 <li>
-                    <a href="*">Project(Coming Soon)</a>
+                    <a href="#" target="_blank">PROJECT(Coming Soon)</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/joon-ruiz-967611201/">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/joon-ruiz-967611201/" target="_blank">LINKDIN</a>
                 </li>
             </ul>
         </nav>
