--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <header>
-        
         <nav class="rightalign">
             <ul>
                 <li id="mainname">
@@ -25,6 +24,13 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section >
+            <h1>PORTFOLIO COMING SOON!<h1>
+            <img class="profile" src="/assets/pictures/Selfphoto.jpeg" alt="profilephotot">
+            <h3>SROLL FUNCTION AND JAVASCRIPT FUNCTION IS COMING SOON! PLEASE WAIT!</h3>
+        </section>
+    </main>
 
 
 
@@ -34,6 +40,7 @@
 
 
     <footer>
+
 
     </footer>
 </body>
