Added input section to the HTML file.

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,20 @@
         </nav>
     </header>
     <main>
-        <section >
-            <h1>PORTFOLIO COMING SOON!<h1>
-            <img class="profile" src="/assets/pictures/Selfphoto.jpeg" alt="profilephotot">
-            <h3>SROLL FUNCTION AND JAVASCRIPT FUNCTION IS COMING SOON! PLEASE WAIT!</h3>
+        <section>
+            <h1>SITE COMING SOON!<h1>
+            <img class="profile" src="/assets/pictures/Selfphoto.jpeg" alt="profilephoto">
+            <h3>JAVASCRIPT FUNCTION IS COMING SOON! PLEASE WAIT!</h3>
+        </section>
+        <section class="inputsection">
+            <h2>Contact Me! 😁 </h2>
+            <label for="email">Email:
+                <input type="text" id="email" name="email">
+            </label>
+            <lable for="message">Message
+                <input type="text" id="message" name="message">
+            </lable>
+            
         </section>
     </main>
 
