Updated the code and added Submit input

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,23 +35,15 @@
             <label for="email">Email:
                 <input type="text" id="email" name="email">
             </label>
-            <lable for="message">Message
+            <label for="message">Message: 
                 <input type="text" id="message" name="message">
-            </lable>
+            </label> <br><br>
+            <input id="submit" type="submit" value="Submit"><br>
             
         </section>
     </main>
 
 
 
-
-
-
-
-
-    <footer>
-
-
-    </footer>
 </body>
 </html>
