--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
             <h1>SITE COMING SOON!<h1>
             <img class="profile" src="/assets/pictures/Selfphoto.jpeg" alt="profilephoto">
             <h3>JAVASCRIPT FUNCTION IS COMING SOON! PLEASE WAIT!</h3>
+            <p class="paragraph">My name is Joon Ruiz. I am currently studying and <br>attending UW bootcamp to become full stack engineer!<br>I will be updating and making new projects<br>along the way of the bootcamp! Please click on Github<br>link above to checkout new projects and work!</p>
         </section>
         <section class="inputsection">
             <h2>Contact Me! 😁 </h2>
@@ -39,7 +40,12 @@
                 <input type="text" id="message" name="message">
             </label> <br><br>
             <input id="submit" type="submit" value="Submit"><br>
-            
+            <h3 class="clock">Time:</h3>
+            <div class="centerbutton>">
+                <button type="button"onclick="document.getElementById('demo').innerHTML = Date()">
+                Click To Display Time.</button>
+                <p id="demo"></p>
+            </div>
         </section>
     </main>
 
